--- a/package.json
+++ b/package.json
@@ -1,5 +1,24 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2"
-  }
+  },
+  "name": "servcer",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/programming-hero-web-course-4/b7a10-chef-recipe-hunter-server-side-reza107-hub.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/programming-hero-web-course-4/b7a10-chef-recipe-hunter-server-side-reza107-hub/issues"
+  },
+  "homepage": "https://github.com/programming-hero-web-course-4/b7a10-chef-recipe-hunter-server-side-reza107-hub#readme",
+  "description": ""
 }
